{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 19,
  "lineage": "5d02582b-5c5e-7c6d-f5e8-a766e8183b0a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031842487567:internet-gateway/igw-0c532e91f11a34539",
            "id": "igw-0c532e91f11a34539",
            "owner_id": "031842487567",
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "tags_all": {
              "Name": "terraform-eks-demo"
            },
            "vpc_id": "vpc-092c44b77f08138ad"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031842487567:route-table/rtb-00576a5290789f8f9",
            "id": "rtb-00576a5290789f8f9",
            "owner_id": "031842487567",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c532e91f11a34539",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-092c44b77f08138ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acf92d0cae62b19f",
            "route_table_id": "rtb-00576a5290789f8f9",
            "subnet_id": "subnet-01cc1510c0c1d3bcd"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f23a31d649347706",
            "route_table_id": "rtb-00576a5290789f8f9",
            "subnet_id": "subnet-03bed1a4d4a24f3af"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031842487567:security-group/sg-008fc56136a3b5a0d",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008fc56136a3b5a0d",
            "ingress": [],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": "",
            "owner_id": "031842487567",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "tags_all": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-092c44b77f08138ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1320265904",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-008fc56136a3b5a0d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031842487567:subnet/subnet-01cc1510c0c1d3bcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cc1510c0c1d3bcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031842487567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "vpc_id": "vpc-092c44b77f08138ad"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031842487567:subnet/subnet-03bed1a4d4a24f3af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bed1a4d4a24f3af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031842487567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "vpc_id": "vpc-092c44b77f08138ad"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031842487567:vpc/vpc-092c44b77f08138ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f1faff8e265fcc49",
            "default_route_table_id": "rtb-0d13f22dccd3e6aee",
            "default_security_group_id": "sg-01953e57fe4b919a1",
            "dhcp_options_id": "dopt-04c0a0dcd6a65e6b3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-092c44b77f08138ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d13f22dccd3e6aee",
            "owner_id": "031842487567",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            }
          }
        }
      ]
    }
  ]
}